2011-09-12  Armando Basile  <hmandevteam@gmail.com>

	* readme.txt: 

2011-09-12  Armando Basile  <hmandevteam@gmail.com>

	* readme.txt:
	* comex.csproj: - add license info in readme file

2011-09-12  Armando Basile  <hmandevteam@gmail.com>

	* comex.csproj:
	* Properties/AssemblyInfo.cs: - removed specific version
	requires for log4net and comex-base

2011-09-01  Armando Basile  <hmandevteam@gmail.com>

	* comex-project.csproj: - cleaning 

2011-09-01  Armando Basile  <hmandevteam@gmail.com>

	* comex-project.csproj: 

2011-09-01  Armando Basile  <hmandevteam@gmail.com>

	* Src/MainClass.cs:
	* comex-project.csproj: 
	- remove reference to gtk (unused)

2011-08-30  Armando Basile  <armando.basile@st.com>

	* Docs/readme:
	* comex-project.csproj:
	* Src/Classes/GlobalObj.cs:
	* Src/Classes/SmartMouse.cs:
	* Properties/AssemblyInfo.cs: 
	- first code added to support serial reader

2011-08-29  Armando Basile  <hmandevteam@gmail.com>

	* Src/Classes/SmartMouse.cs: 
	- improve serial reader communication


2011-08-13  hmandevteam  <hmandevteam@gmail.com>

	* Src/Classes/GlobalObj.cs:
	* Properties/AssemblyInfo.cs: 
	- improved close/open reader action

2011-08-13  hmandevteam  <hmandevteam@gmail.com>

	* Languages/en-US.xml:
	* Languages/it-IT.xml:
	* Src/Classes/GlobalObj.cs: 
	- added check for command to send

2011-08-13  hmandevteam  <hmandevteam@gmail.com>

	* Src/MainClass.cs:
	* Languages/en-US.xml:
	* Languages/it-IT.xml:
	* comex-project.csproj:
	* Src/Classes/GlobalObj.cs:
	* Src/Classes/SmartMouse.cs:
	* Properties/AssemblyInfo.cs:
	* Src/Classes/clsEncoding.cs:
	* Src/Classes/ConsoleManager.cs:
	* Src/Gui_Classes/MainWindowClass.cs: 
	- added choice of reader also in console interface
	- added exchange manager class to perform reader communication (it manage two type of reader)

2011-08-13  hmandevteam  <hmandevteam@gmail.com>

	* Src/MainClass.cs:
	* Languages/en-US.xml:
	* Languages/it-IT.xml:
	* comex-project.csproj:
	* Src/Classes/GlobalObj.cs: